--- a/cines.html
+++ b/cines.html
@@ -51,22 +51,8 @@
 				<a href="http://www.cinestar.com.pe/starcard/"><img src="img/varios/starcard.jpg"></a>
 				<a href="http://www.cinestar.com.pe/cinefilo_star/"><img src="img/varios/cinefilo-star.jpg"></a>
 			</div>
-			<div class="contenido-interno">
-
-				<br><h1>Nuestros Cines</h1><br>
+			<div class="contenido-interno" id="contenido-interno">
 				
-				<div class="contenido-cine">
-	        	    <img src="img/cine/1.1.jpg" width="227" height="170">
-            	   	<div class="datos-cine">
-       				   	<h4>Excelsior</h4><br>
-                		<span>Jirón de la Unión 780 - Lima<br><br>Teléfono: 714-1865 anexo 865</span>
-                	</div>
-                	<br>
-                	<a href="http://www.cinestar.com.pe/multicines/cine/Cinestar-Excelsior">
-                		<img src="img/varios/ico-info2.png" width="150" height="40">
-                	</a>
-				</div>
-
 			</div>
 		</div>
 		<div class="clearbox"><br></div>
