agregado de las funcciones con base de datos por medio de js

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<span class="social">Síguenos en: </span>
 				<ul class="menu-principal">
 		    		<li class="menu-item"><a href="peliculas.html?id=cartelera">Cartelera</a></li>
-		       		<li class="menu-item"><a href="peliculas.html?id=estreno">Próximos estrenos</a></li>
+		       		<li class="menu-item"><a href="peliculas.html?id=estrenos">Próximos estrenos</a></li>
 		       		<li class="menu-item"><a href="http://www.cinestar.com.pe/starcard">Star Card</a></li>
 		        	<li class="menu-item"><a href="cines.html">Nuestros Cines</a></li>
 		        	<li class="menu-item"><a href="http://www.cinestar.com.pe/ventas_corporativas">Ventas Corporativas</a></li>
@@ -52,7 +52,7 @@
 				<a href="http://www.cinestar.com.pe/starcard/"><img src="img/varios/starcard.jpg"></a>
 				<a href="http://www.cinestar.com.pe/cinefilo_star/"><img src="img/varios/cinefilo-star.jpg"></a>
 			</div>
-			<div class="contenido-interno">
+			<div class="contenido-interno" id="contenido-interno">
 			</div>
 		</div>
 		<div class="clearbox"><br></div>
@@ -63,6 +63,7 @@
 		
 			</div>
 		</footer>
+		<script src="js/cinestar.js"></script>
 
 	</body>
 </html>
