--- a/cine.html
+++ b/cine.html
@@ -30,7 +30,7 @@
 				<span class="social">Síguenos en: </span>
 				<ul class="menu-principal">
 		    		<li class="menu-item"><a href="peliculas.html?id=cartelera">Cartelera</a></li>
-		       		<li class="menu-item"><a href="peliculas.html?id=estreno">Próximos estrenos</a></li>
+		       		<li class="menu-item"><a href="peliculas.html?id=estrenos">Próximos estrenos</a></li>
 		       		<li class="menu-item"><a href="http://www.cinestar.com.pe/starcard">Star Card</a></li>
 		        	<li class="menu-item"><a href="cines.html">Nuestros Cines</a></li>
 		        	<li class="menu-item"><a href="http://www.cinestar.com.pe/ventas_corporativas">Ventas Corporativas</a></li>
