--- a/pelicula.html
+++ b/pelicula.html
@@ -30,7 +30,7 @@
 				<span class="social">Síguenos en: </span>
 				<ul class="menu-principal">
 		    		<li class="menu-item"><a href="peliculas.html?id=cartelera">Cartelera</a></li>
-		       		<li class="menu-item"><a href="peliculas.html?id=estreno">Próximos estrenos</a></li>
+		       		<li class="menu-item"><a href="peliculas.html?id=estrenos">Próximos estrenos</a></li>
 		       		<li class="menu-item"><a href="http://www.cinestar.com.pe/starcard">Star Card</a></li>
 		        	<li class="menu-item"><a href="cines.html">Nuestros Cines</a></li>
 		        	<li class="menu-item"><a href="http://www.cinestar.com.pe/ventas_corporativas">Ventas Corporativas</a></li>
@@ -51,43 +51,7 @@
 				<a href="http://www.cinestar.com.pe/starcard/"><img src="img/varios/starcard.jpg"></a>
 				<a href="http://www.cinestar.com.pe/cinefilo_star/"><img src="img/varios/cinefilo-star.jpg"></a>
 			</div>
-			<div class="contenido-interno">
-				<br><h1>Cartelera</h1><br>
-
-				<div class="contenido-pelicula">
-					<div class="datos-pelicula">
-						<h2>Jumanji: En la Selva (Todo Público)</h2>
-						<p>Remake de la película homónima de 1995 adaptado a la época actual, en donde cuatro adolescentes se introducen en un nueva aventura a partir de “Jumanji”, un videojuego que sirve como un portal a través del espacio-tiempo. Absorbidos por el mundo de Jumanji, este juego no se puede abandonar hasta que acaba la partida</p>
-						<br>
-						<div class="tabla">
-							<div class="fila">
-								<div class="celda-titulo">Título Original :</div>
-								<div class="celda">Jumanji: En la Selva (Todo Público)</div>
-							</div>
-							<div class="fila">
-								<div class="celda-titulo">Estreno :</div>
-								<div class="celda">11 de Enero del 2018</div>
-							</div>
-							<div class="fila">
-								<div class="celda-titulo">Género :</div>
-								<div class="celda">Aventura / Acción</div>
-							</div>
-							<div class="fila">
-								<div class="celda-titulo">Director :</div>
-								<div class="celda">Jake Kasdan</div>
-							</div>
-							<div class="fila">
-								<div class="celda-titulo">Reparto :</div>
-								<div class="celda">Dwayne Johnson, Kevin Hart, Jack Black, Karen Gillan</div>
-							</div>
-						</div>
-					</div>
-					<img src="img/pelicula/1.jpg" width="160" height="226"><br><br>
-				</div>
-				<div class="pelicula-video">
-					<!-- <iframe width="580" height="400" src="http://www.youtube.com/v/6maujJFcuxA" frameborder="0" allowfullscreen></iframe> -->
-					<embed src="http://www.youtube.com/v/6maujJFcuxAfs" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="580" height="400">
-				</div>
+			<div class="contenido-interno" id="contenido-interno">
 
 			</div>
 		</div>
@@ -98,6 +62,6 @@
 				<p>Copyright © 2016 ® Multicines CINESTAR - Todos los Derechos Reservados</p>
 			</div>
 		</footer>
-		
+		<script type="text/javascript" src="js/pelicula.js"></script>
 	</body>
 </html>
