--- a/peliculas.html
+++ b/peliculas.html
@@ -30,7 +30,7 @@
 				<span class="social">Síguenos en: </span>
 				<ul class="menu-principal">
 					<li class="menu-item"><a href="peliculas.html?id=cartelera">Cartelera</a></li>
-					<li class="menu-item"><a href="peliculas.html?id=estreno">Próximos estrenos</a></li>
+					<li class="menu-item"><a href="peliculas.html?id=estrenos">Próximos estrenos</a></li>
 					<li class="menu-item"><a href="http://www.cinestar.com.pe/starcard">Star Card</a></li>
 					<li class="menu-item"><a href="cines.html">Nuestros Cines</a></li>
 					<li class="menu-item"><a href="http://www.cinestar.com.pe/ventas_corporativas">Ventas Corporativas</a></li>
@@ -51,27 +51,8 @@
 				<a href="http://www.cinestar.com.pe/starcard/"><img src="img/varios/starcard.jpg"></a>
 				<a href="http://www.cinestar.com.pe/cinefilo_star/"><img src="img/varios/cinefilo-star.jpg"></a>
 			</div>
-			<div class="contenido-interno">
-				<br><h1>Cartelera</h1><br>
-
-				<div class="contenido-pelicula">
-					<div class="datos-pelicula">
-						<h2>Locos de Amor 2 (+14) (HD - Doblada)</h2><br>
-						<p>¡Vuelve la comedia musical del año! Un hombre descorazonado que empieza a salir con una conductora que da consejos de amor en la radio. Una mujer desesperada por ser mamá ...</p>
-						<br>
-                       	<div class="boton-pelicula"> 
-                       		<a href="http://www.cinestar.com.pe/cartelera/pelicula/Locos-de-Amor-2" >
-                       			<img src="img/varios/btn-mas-info.jpg" width="120" height="30" alt="Ver info">
-                       		</a>
-               			</div>
-               			<div class="boton-pelicula"> 
-               				<a href="http://www.cinestar.com.pe/popups/trailer/v3fspveODBI" onclick="return hs.htmlExpand(this, { objectType: 'iframe' } )" >
-               					<img src="img/varios/btn-trailer.jpg" width="120" height="30" alt="Ver trailer">
-               				</a>
-                        </div> 
-					</div>
-					<img src="img/pelicula/10.jpg" width="160" height="226"><br><br>
-				</div>
+			<div class="contenido-interno" id="contenido-interno">
+				
 			</div>
 		</div>
 		<div class="clearbox"><br></div>
@@ -82,5 +63,6 @@
 			</div>
 		</footer>
 
+		<script type="text/javascript" src="js/peliculas.js"></script>
 	</body>
 </html>
